Remove aggresive opts